# final_project

./: .gitignore  CMakeLists.txt
include/: ifilter.h  pipeline.h  waveform.h
include/app/: application.h
include/cli/: args_parser.h  filter_descriptor.h  filter_registry.h
include/converter/: filter_pipeline_builder.h
include/filters/: am_gen_filter.h  ampl_filter.h  fade_filter.h  lowpass_filter.h  normalize_filter.h  reverse_filter.h  silence_filter.h  sin_gen_filter.h  timestretch_filter.h
include/wav/: wav_reader.h  wav_structs.h  wav_writer.h
src/: main.cpp  pipeline.cpp  waveform.cpp
src/app/: application.cpp
src/cli/: args_parser.cpp  filter_registry.cpp
src/converter/: filter_pipeline_builder.cpp
src/filters/: am_gen_filter.cpp  ampl_filter.cpp  fade_filter.cpp  lowpass_filter.cpp  normalize_filter.cpp  reverse_filter.cpp  silence_filter.cpp  sin_gen_filter.cpp  timestretch_filter.cpp
src/wav/: wav_reader.cpp  wav_writer.cpp
tests/: test_main.cpp
